--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -242,9 +242,9 @@
         \textbf{\color{orange}p\_bgColor} & Substitution de commande\\
         \hline
     \end{tabular}
-\end{justify}
+\end{justify}\setlength{\parskip}{2em}
 
-\par\noindent\rule{\textwidth}{0.4pt}
+\par\noindent\rule{\textwidth}{0.4pt}\setlength{\parskip}{1em}
 
 \begin{justify}
     \textbf{Fonctionnement :}\\[1\baselineskip]
@@ -379,9 +379,9 @@
         \textbf{\color{orange}p\_bgColorPos} & Nombre entier « 1 », « 2 » et / ou « 3 »\\
         \hline
     \end{tabular}
-\end{justify}
+\end{justify}\setlength{\parskip}{2em}
 
-\par\noindent\rule{\textwidth}{0.4pt}\\
+\par\noindent\rule{\textwidth}{0.4pt}\setlength{\parskip}{1em}
 
 \begin{justify}
     \textbf{Variables :}\\[1\baselineskip]
@@ -394,9 +394,9 @@
         \textbf{\color{orange}v\_strlen} & Nombre entier\\
         \hline
     \end{tabular}
-\end{justify}
+\end{justify}\setlength{\parskip}{2em}
 
-\par\noindent\rule{\textwidth}{0.4pt}
+\par\noindent\rule{\textwidth}{0.4pt}\setlength{\parskip}{1em}
 
 \begin{justify}
     \textbf{Fonctionnement :}\\[1\baselineskip]
@@ -429,18 +429,18 @@
     {
         \begin{justify}
             Pour connaitre la valeur de chaque chiffre enregistré dans ce paramètre, Un tableau est créé et prend en valeurs chacun des chiffres.
-        \end{justify}\setlength{\parskip}{1em}
+        \end{justify}
 
         \begin{justify}
             \textbf{\color{brick}Si} un nombre entier positif est passé à ce même paramètre \textbf{ET} que ce nombre entier soit plus grand ou égal à 1 \textbf{ET} qu'il soit plus petit ou égal à 3, \textbf{\color{brick}alors} :
-        \end{justify}\setlength{\parskip}{1em}
+        \end{justify}
 
         \begin{justify}
             \item
             {
                 \begin{justify}
                     \textbf{\color{cyan}Pour} un nombre \textbf{\color{orange}i} de valeurs dans l'intervalle autorisée :
-                \end{justify}
+                \end{justify}\setlength{\parskip}{1em}
 
                 \begin{itemize}
                     \item
@@ -544,9 +544,9 @@
         \textbf{\color{orange}\$4} & Nombre entier « 1 », « 2 » et / ou « 3 »\\
         \hline
     \end{tabular}
-\end{justify}
+\end{justify}\setlength{\parskip}{2em}
 
-\par\noindent\rule{\textwidth}{0.4pt}
+\par\noindent\rule{\textwidth}{0.4pt}\setlength{\parskip}{1em}
 
 \begin{justify}
     \textbf{Fonctionnement :}\\[1\baselineskip]
