--- a/docs/fr/modules/main/functions/Status.tex
+++ b/docs/fr/modules/main/functions/Status.tex
@@ -243,7 +243,8 @@
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \begin{justify}
-    \textbf{Paramètres :}\\[1\baselineskip]
+    \textbf{Paramètres :}
+
     \begin{tabular}{|l|l|}
         \hline
         \textbf{\color{orange}p\_file} & Chemin\\
@@ -251,20 +252,21 @@
         \textbf{\color{orange}p\_lineno} & Nombre entier\\
         \hline
     \end{tabular}
-\end{justify}
+\end{justify}\setlength{\parskip}{2em}
 
 % -----------------------
 
-\par\noindent\rule{\textwidth}{0.4pt}
+\par\noindent\rule{\textwidth}{0.4pt}\setlength{\parskip}{1em}
 
 \begin{justify}
-    \textbf{Variables :}\\[1\baselineskip]
+    \textbf{Variables :}
+
     \begin{tabular}{|l|l|}
         \hline
         \textbf{\color{orange}va\_correctValues} & Tableau\\
         \hline
     \end{tabular}
-\end{justify}
+\end{justify}\setlength{\parskip}{1em}
 
 % -----------------------
 
